# Glossary-generator

./: .gitignore  README.md  glossary.html  glossary_webapp.html  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  validate-glossary.yml
examples/: dynamic_fields.view.lkml  ecommerce.model.lkml  glossary_snapshot.json  latest_drift_report.json  orders.view.lkml  products.view.lkml  revenue.dashboard.lookml  users.view.lkml
lookml_glossary/: __init__.py  __main__.py  cli.py  enrichment.py  generator.py  liquid.py  parser.py  validator.py
lookml_glossary/templates/: glossary.html.j2  glossary.md.j2  webapp.html.j2
tests/: test_enrichment.py  test_liquid.py  test_parser.py  test_validator.py
